--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -28,8 +28,9 @@
 
             <ImageView
                 android:id="@+id/imageView_character"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
                 android:scaleType="fitCenter"
                 tools:srcCompat="@tools:sample/avatars" />
 
@@ -38,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
